# nembot

./: .gitattributes  .gitignore  .tokeignore  LICENSE  README.md  command_execution.py  command_processing.py  config_default.py  console_handler.py  database.py  explosion.py  gamestate_integration_GSI.cfg  globals.py  main.py  processor.py  pyproject.toml  steam_appid.txt  update_RTSS_overlay.py
assets/: README.md
commands/: container.py  fact.py  fetch.py  fish.py  webfishing.py
data/: facts.json  fishbase.json  odds.json  webfishing.json  webfishing_alt.json
data/webfishing/Creatures_Fish_Void/: fish_void_voidfish.tres
data/webfishing/custom/: fish_rain_azifish.tres
data/webfishing/mods/MudKipster.Webfishing101/fish/: achilles_tang.tres  anglyosaur.tres  antchovy.tres  apollock.tres  archer_fish.tres  ax-xolotl.tres  bacchus_cuda.tres  balance_school_of_fish.tres  balancecuda.tres  basking_in_the_sun_shark.tres  be_mine_fish.tres  bear_acuda.tres  bearded_trout.tres  black_cat-fish.tres  black_eggshellfish.tres  black_knight_bass.tres  black_squidow.tres  blackberry_jellyfish.tres  blue_armored_guard.tres  blue_eggshellfish.tres  boar_fish.tres  bone_fish.tres  boss_hog.tres  box_jelly.tres  brain_sturgeon.tres  bubba_fish.tres  butterfly_shrimp.tres  caesarbream.tres  cat-fish.tres  chameleon_fish.tres  channel_bass.tres  charred_dekoi.tres  chupacarpe.tres  codfather.tres  (+148 more)
gsi/: gamestate.py  information.py  payloadparser.py  server.py
loop/: deathchecking.py  discord_rpc.py  heartrate.py  roundtracking.py
util/: signal.py  translate.py  ui.py
(+333 files in other folders)
