[project]
name = "nembot"
version = "0.1.0"
description = "CS chatbot :3"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "aiohttp>=3.11.7",
    "asqlite>=2.0.0",
    "asyncio>=3.4.3",
    "dearpygui>=2.0.0",
    "lingua-language-detector>=2.0.2",
    "psutil>=6.1.0",
    "pyexiftool>=0.5.6",
    "pynput>=1.7.7",
    "pypresence>=4.3.0",
    "pythonnet>=3.0.5",
    "pywin32>=308",
    "ruff>=0.8.3",
    "unit-parse>=0.1.11",
    "watchdog>=6.0.0",
]

[tool.ruff]
line-length = 200

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "cr-lf"
preview = true

[tool.ruff.lint]
preview = true
ignore = ["F401", "F403", "F405"]
